<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/text1"
        android:textSize="@dimen/abc_action_button_min_height_material" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    </LinearLayout>

<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RadioButton android:id="@+id/radio_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french"
            />

        <RadioButton android:id="@+id/radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:checked="true"/>

      </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_mycourselist"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/mycourselist"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button_grades"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/grades"
            android:layout_gravity="center_horizontal" />

        <Button
        android:id="@+id/button_contactme"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/contactme"
        android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>